--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,18 @@
   min-width: 90px;
 }
 
+/* Side-Bar */
+
+#side-bar {
+  background-color: papayawhip;
+}
+
+#about-text,
+#instructions-text {
+  background-color: #3d3d3d;
+  color: ghostwhite;
+}
+
 /* Controls */
 
 .dropdown-item {
@@ -23,33 +35,22 @@
   font-size: 1.5rem;
 }
 
-/* Side-Bar */
-
-#side-bar {
-  background-color: papayawhip;
-}
-
-#about-text, #instructions-text {
-  background-color: #3d3d3d;
-  color: ghostwhite;
-}
-
 /* Game Area */
 
-#game-area {
+#computer-area {
   background-color: darkgrey;
 }
 
-.grid-container {
+#c-tiles {
   display: grid;
   width: 100%;
   grid-template-columns: repeat(3, auto);
   grid-template-rows: repeat(3, auto);
-  gap: 20px;
+  gap: 15px;
   justify-content: center;
 }
 
-.grid-item {
+#c-tiles .grid-item {
   height: 100px;
   width: 100px;
 }
@@ -60,9 +61,18 @@
   box-shadow: 0 0px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
-
-
-#guess-tiles {
+#player-area {
   background-color: #3d3d3d;
   min-height: 100px;
+}
+
+#p-tiles {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+#p-tiles .grid-item {
+  height: 75px;
+  width: 75px;
 }
