Added About info and Instructions to modals in the header and added styling to each

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,8 @@
 }
 
 #about-text,
-#instructions-text {
+#instructions-text,
+.modal-body {
   background-color: #3d3d3d;
   color: ghostwhite;
 }
