--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@
   justify-content: center;
 }
 
-#c-tiles .grid-item {
+#c-tiles .tile {
   height: 120px;
   width: 120px;
 }
@@ -95,7 +95,7 @@ img {
   justify-content: center;
 }
 
-#p-tiles .grid-item {
+#p-tiles .tile {
   height: 90px;
   width: 90px;
 }
@@ -110,7 +110,7 @@ img {
 
 @media screen and (max-width: 992px) {
 
-  #c-tiles .grid-item {
+  #c-tiles .tile {
     height: 100px;
     width: 100px;
   }
@@ -119,7 +119,7 @@ img {
 
 @media screen and (max-width: 600px) {
 
-  #p-tiles .grid-item {
+  #p-tiles .tile {
     height: 80px;
     width: 80px;
   }
@@ -128,12 +128,12 @@ img {
 
 @media screen and (max-width: 360px) {
 
-  #c-tiles .grid-item {
+  #c-tiles .tile {
     height: 80px;
     width: 80px;
   }
 
-  #p-tiles .grid-item {
+  #p-tiles .tile {
     height: 70px;
     width: 70px;
   }
