--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@
   background-color: #3d3d3d;
 }
 
+img {
+  width: 90%;
+}
+
 .tile {
   background-color: #eac086;
   border-radius: 10px;
@@ -45,8 +49,22 @@
   justify-content: center;
 }
 
-img {
-  width: 90%;
+.t-inner {
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
+}
+
+.t-content {
+  position: absolute;
+  backface-visibility: hidden;
+}
+
+.t-back {
+  transform: rotateY(180deg);
+}
+
+.tile.flipped .t-inner {
+  transform: rotateY(180deg);
 }
 
 /* Controls */
