--- a/css/style.css
+++ b/css/style.css
@@ -39,31 +39,50 @@ img {
 }
 
 .tile {
-  background-color: #eac086;
+  background-color: transparent;
   border-radius: 10px;
   box-shadow: 0 0px 2px 2px rgba(0, 0, 0, 0.5);
-  padding: 10px;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
+  perspective: 1000px;
 }
+
+/* Flip Functionality */
 
 .t-inner {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  text-align: center;
+  transition: transform 0.6s;
   transform-style: preserve-3d;
-  transition: transform 0.5s;
 }
 
-.t-content {
+.t-front, .t-back {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
   position: absolute;
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
 
+.t-front {
+  background-color: #eac086;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+
 .t-back {
+  background-color: black;
   transform: rotateY(180deg);
 }
 
-.tile.flipped .t-inner {
+.flipped {
   transform: rotateY(180deg);
 }
 
