--- a/css/style.css
+++ b/css/style.css
@@ -40,8 +40,6 @@ img {
 
 .tile {
   background-color: transparent;
-  border-radius: 10px;
-  box-shadow: 0 0px 2px 2px rgba(0, 0, 0, 0.5);
   text-align: center;
   display: flex;
   align-items: center;
@@ -58,6 +56,8 @@ img {
   text-align: center;
   transition: transform 0.6s;
   transform-style: preserve-3d;
+  box-shadow: 0 0px 2px 2px rgba(0, 0, 0, 0.7);
+  border-radius: 10px;
 }
 
 .t-front, .t-back {
@@ -78,8 +78,9 @@ img {
 }
 
 .t-back {
-  background-color: black;
+  background-color: #eac086;
   transform: rotateY(180deg);
+  box-shadow: 0px 0px 9px 4px rgba(0, 0, 0, 0.7) inset;
 }
 
 .flipped {
