--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,15 @@
   grid-template-rows: auto 1fr auto;
 }
 
+button {
+  margin: 0;
+  padding: 0;
+  border: none;
+  background: none;
+  font: inherit;
+  color: inherit;
+}
+
 /*-- Header --*/
 
 #logo {
@@ -43,6 +52,7 @@ img {
 
 .tile {
   background-color: transparent;
+  border-radius: 10px;
   text-align: center;
   display: flex;
   align-items: center;
@@ -63,7 +73,8 @@ img {
   border-radius: 10px;
 }
 
-.t-front, .t-back {
+.t-front,
+.t-back {
   width: 100%;
   height: 100%;
   border-radius: 10px;
