--- a/css/style.css
+++ b/css/style.css
@@ -65,15 +65,15 @@ img {
 }
 
 .t-clicked {
-  box-shadow: 0px 0px 9px 4px blue;
+  box-shadow: 0px 0px 9px 4px #00a3d5;
 }
 
 .t-correct {
-  box-shadow: 0px 0px 9px 4px green;
+  box-shadow: 0px 0px 9px 4px #02c435;
 }
 
 .t-incorrect {
-  box-shadow: 0px 0px 9px 4px red;
+  box-shadow: 0px 0px 9px 4px #D30302;
 }
 
 /* Flip Functionality */
