--- a/css/style.css
+++ b/css/style.css
@@ -206,3 +206,10 @@ img {
     justify-content: center;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .tile {
+    height: 80px;
+    width: 80px;
+  }
+}
